Fixes #1130 and other problems caused by missing background image

--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -17,7 +17,7 @@ body {
 }
 
 .image-background {
-	background-image: url(../img/default-background.jpg);
+	background-image: url('/static/img/default-background.jpg');
 	height: 500px;
 	position: absolute;
 	z-index: 0;
